Hopefully fix an overlap issue

--- a/bloxel-landing-page/bloxcable/channels/styles.css
+++ b/bloxel-landing-page/bloxcable/channels/styles.css
@@ -23,7 +23,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden; /* Ensure contents do not overflow */
+    overflow: contain; /* Ensure contents do not overflow */
 }
 
 .video-container video, .image-container img {
